add_executable(test_AkimaSpline test_AkimaSpline.cpp)
target_link_libraries(test_AkimaSpline PRIVATE Catch2::Catch2WithMain psimaglite)
catch_discover_tests(test_AkimaSpline)

add_executable(testArnoldiIteration testArnoldiIteration.cpp)
target_link_libraries(testArnoldiIteration PRIVATE Catch2::Catch2WithMain psimaglite)
catch_discover_tests(testArnoldiIteration)

# ArnoldiSaI depends on ArnolidIteration; not sure how to make dependency explicit
add_executable(testArnoldiSaI testArnoldiSaI.cpp)
target_link_libraries(testArnoldiSaI PRIVATE Catch2::Catch2WithMain psimaglite)
catch_discover_tests(testArnoldiSaI)

add_executable(test_InputPath test_InputPath.cpp)
target_link_libraries(test_InputPath PRIVATE Catch2::Catch2WithMain psimaglite)
catch_discover_tests(test_InputPath)

add_executable(test_GetBraOrKet test_GetBraOrKet.cpp)
target_link_libraries(test_GetBraOrKet PRIVATE Catch2::Catch2WithMain psimaglite)
catch_discover_tests(test_GetBraOrKet)

add_executable(test_Matrix test_Matrix.cpp)
target_link_libraries(test_Matrix PRIVATE Catch2::Catch2WithMain psimaglite)
catch_discover_tests(test_Matrix)
